@@ -186,7 +186,7 @@ DIM door(206), gen(104), npcl(2100), npcs(1500), saytag(21), tag(127), hero(40),
 DIM item(-3 TO 199), item$(-3 TO 199), eqstuf(40, 4), gmap(20), csetup(20), carray(20), stock(99, 49), choose$(1), chtag(1), saybit(0), sayenh(6), catx(15), caty(15), catz(15), catd(15), xgo(3), ygo(3), herospeed(3), wtog(3), say$(7), hmask(3),  _
 tastuf(40), cycle(1), cycptr(1), cycskip(1), herobits(59, 3), itembits(255, 3), learnmask(29)
 DIM mapname$, catermask(0), nativehbits(40, 4), keyv(55, 1), lumpmod(0)
-DIM script(4096), heap(2048), global(1024), astack(512), scrat(128, 13), retvals(32), plotstring$(31), plotstrX(31), plotstrY(31), plotstrCol(31), plotstrBGCol(31), plotstrBits(31)
+DIM script(4096), heap(2048), global(1024), astack(512), scrat(128, 14), retvals(32), plotstring$(31), plotstrX(31), plotstrY(31), plotstrCol(31), plotstrBGCol(31), plotstrBits(31)
 DIM uilook(uiColors)
 '--stuff we used to DIM here, but have defered to later
 'DIM scroll(16002), pass(16002)
@@ -1454,7 +1454,7 @@ ON ERROR GOTO 0
 exitprogram 0
 
 '--this is what we have dimed for scripts
-'--script(4096), heap(2048), global(1024), astack(1024), scrat(128, 12), nowscript
+'--script(4096), heap(2048), global(1024), astack(1024), scrat(128, 14), nowscript
 interpret:
 IF scrwatch THEN scriptwatcher vpage
 IF nowscript >= 0 THEN
